# QT-messanger

./: CMakeLists.txt  README.md  authWidget.cxx  authWidget.hxx  main.cpp  main.cxx  mainwindow.cpp  mainwindow.h  mainwindow.ui  messenger.cxx  messenger.hxx  notification.cxx  notification.hxx  pages.h  registerwindow.cpp  registerwindow.h  screenWidget.cxx  screenWidget.hxx  signINwidget.cpp  signINwidget.cxx  signINwidget.h  signINwidget.hxx  signupwidget.cpp  signupwidget.cxx  signupwidget.h  signupwidget.hxx  webSocket.hxx
mainWidget/: dialogMessages.cxx  dialogMessages.hxx  dialogsPreviews.cxx  dialogsPreviews.hxx  mainWidget.cxx  mainWidget.hxx
ui/: exampleAuthWdg.ui  exampleDialogPreview.ui  exampleMainWidget.ui  exampleMessangeLabel.ui  window.ui
